actualizacion de pagina

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
 
             <div class="logo">
-                <img src="/assets/Vector (1).svg" alt="">
+                <img src="/assets/Vector (1).svg" alt="" class="Vector">
                 <span>FoldTunes</span>
 
             </div>
