--- a/index.html
+++ b/index.html
@@ -75,21 +75,23 @@
 
         <section class="reproductor-ubicacion">
 
+            <div class="cancion-info">
+              <h1>Vignette</h1>
+              <p>Twenty One Pilots</p>
+            </div>
 
             <div class="reproductor">
 
-                <div class="cancion-info">
-                  <h2>Vignette</h2>
-                  <p>Twenty One Pilots</p>
-                </div>
                 
-                <img src="/assets/PERFIL.jpg" alt="Portada del álbum">
+                <img src="/assets/VINILO CD.png" alt="Imagen de cancion" class="portada-del-album">
 
                 <div class="controles">
-                  <button>⏮️</button>
-                  <button>▶️</button>
-                  <button>⏸️</button>
-                  <button>⏭️</button>
+
+                    <audio autoplay controls id="current-song-img"></audio>
+                  <button><img src="/assets/atras.svg" alt=""></button>
+                  <button><img src="/assets/PLAY.svg" alt=""></button>
+                  <button><img src="/assets/PAUSE.svg" alt=""></button>
+                  <button><img src="/assets/adelante.svg" alt=""></button>
                 </div>
               </div>
 
