--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
             <div class="reproductor">
 
                 
-                <img id="audio-player-image"  src="" alt="">
+                <img id="audio-player-image"  src="" alt="" class="portada-del-album ">
 
 
                 <div class="controles">
                 
-                    <audio autoplay controls id="current-song-audio" src=""></audio>
-                  <button><img src="/assets/atras.svg" alt=""></button>
-                  <button><img src="/assets/PLAY.svg" alt=""></button>
-                  <button><img src="/assets/PAUSE.svg" id="pause-btn" alt=""></button>
-                  <button><img src="/assets/adelante.svg" alt=""></button>
+                    <audio play controls id="current-song-audio" src=""></audio>
+                  <!-- <button><img src="/assets/atras.svg" alt=""></button> -->
+                  <!-- <button><img src="/assets/PLAY.svg" alt=""></button> -->
+                  <!-- <button><img src="/assets/PAUSE.svg" id="pause-btn" alt=""></button> -->
+                  <!-- <button><img src="/assets/adelante.svg" alt=""></button> -->
                 </div>
               </div>
 
