--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                 <div class="controles">
                 
-                    <audio play controls id="current-song-audio" src=""></audio>
+                    <audio play controls id="current-song-audio" autoplay src=""></audio>
                   <!-- <button><img src="/assets/atras.svg" alt=""></button> -->
                   <!-- <button><img src="/assets/PLAY.svg" alt=""></button> -->
                   <!-- <button><img src="/assets/PAUSE.svg" id="pause-btn" alt=""></button> -->
